--- a/views/widget.jade
+++ b/views/widget.jade
@@ -475,7 +475,7 @@ block content
 
                   .widget-code-wrap
                     .sample.shadow-z-2#widget_code
-                      pre.prettyprint.lang-html
+                      pre
                         {{ widget.widget_code }}
                     .codebox-actions(ng-show='widget.showWidgetCode')
                       a(id="clipboard_copy" href="#" data-clipboard-target="#widget_code") Copy to Clipboard
