[MISC] Adding red color to error messages

--- a/public/stylesheets/less/form.less
+++ b/public/stylesheets/less/form.less
@@ -1,8 +1,11 @@
 .form-control{
   height: 40px;
-  border-color:#a1aeb7; 
+  border-color:#a1aeb7;
 }
 
+.error-label{
+  color: red;
+}
 
 /*Checkbox*/
 .checkbox{
@@ -12,7 +15,6 @@
   label::before{
     background: #dbe1e5;
     border-color:#8a9399;
-    
   }
   input[type="checkbox"]:checked + label::after{
     color: @vx-purple;
