--- a/views/forgot.jade
+++ b/views/forgot.jade
@@ -68,9 +68,9 @@ block content
                   .form-group
                     label.control-label Email
                     input.form-control(type="email" id="uemail" name="uemail" ng-model="forgot.uemail", required, value= "#{email}")
-                    div(ng-show="forgot_form.$submitted || forgot_form.uemail.$touched")
+                    .error-label(ng-show="forgot_form.$submitted || forgot_form.uemail.$touched")
                       div(ng-show="forgot_form.uemail.$error.required") Email is required
-                    div(ng-show="forgot_form.uemail.$dirty && forgot_form.uemail.$invalid")
+                    .error-label(ng-show="forgot_form.uemail.$dirty && forgot_form.uemail.$invalid")
                       div(ng-show="forgot_form.uemail.$error.email") Email is invalid
 
                   button.btn.btn-default#forgot(ng-disabled="forgot_form.$invalid" ng-click="forgot.processForm()") Reset Password
