--- a/views/reset.jade
+++ b/views/reset.jade
@@ -76,13 +76,13 @@ block content
                   .form-group
                     label.control-label New Password
                     input.form-control(type="password" id="upassword" name="upassword" ng-model="resetpass.upassword" required ng-minlength="8")
-                    div(ng-show="reset_form.$submitted || reset_form.upassword.$touched")
+                    .error-label(ng-show="reset_form.$submitted || reset_form.upassword.$touched")
                       div(ng-show="reset_form.upassword.$error.minlength") Password must be at least 8 characters in length
                       div(ng-show="reset_form.upassword.$error.required") Password is required
                   .form-group
                     label.control-label Confirm Password
                     input.form-control(type="password" id="confirmation" name="confirmation" ng-model="resetpass.confirmation" required pw-check="upassword")
-                    div(ng-show="reset_form.$submitted || reset_form.confirmation.$touched")
+                    .error-label(ng-show="reset_form.$submitted || reset_form.confirmation.$touched")
                       div(ng-show="reset_form.confirmation.$error.required") Confirmation is required
                       div(ng-show="reset_form.confirmation.$error.pwmatch") Password confirmation does not match
 
