--- a/views/signup.jade
+++ b/views/signup.jade
@@ -86,13 +86,13 @@ block content
                   .form-group
                     label.control-label Password
                     input.form-control(type="password" id="upassword" name="upassword" ng-model="account.upassword" required ng-minlength="8")
-                    div(ng-show="create_account.$submitted || create_account.upassword.$touched")
+                    .error-label(ng-show="create_account.$submitted || create_account.upassword.$touched")
                       div(ng-show="create_account.upassword.$error.required") Password is required
                       div(ng-show="create_account.upassword.$error.minlength") Password must be at least 8 characters in length
                   .form-group
                     label.control-label Confirm Password
                     input.form-control(type="password" id="confirmation" name="confirmation" ng-model="account.confirmation" required pw-check="upassword")
-                    div(ng-show="create_account.$submitted || create_account.confirmation.$touched")
+                    .error-label(ng-show="create_account.$submitted || create_account.confirmation.$touched")
                       div(ng-show="create_account.confirmation.$error.pwmatch") Password confirmation does not match
                   button.btn.btn-default#create(ng-disabled="create_account.$invalid" ng-click="account.processForm()") Create Account
                   br
