[MISC] Pushing a link for voxbone brand

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -37,7 +37,7 @@ html(lang='en', ng-app="voxboneApp")
     .container
       nav.navbar
         .navbar-header
-          a.navbar-brand(href='#')
+          a.navbar-brand(href='https://voxbone.com' target="_blank")
           span.subBrand Voxbone WebRTC Beta
         .pull-right
           if account
