--- a/views/voxbone_widget.jade
+++ b/views/voxbone_widget.jade
@@ -151,7 +151,7 @@ html(lang='en', ng-app="voxboneApp")
           }
 
           $scope.showCallButton = function () {
-            return $scope.isWebRTCSupported() || "#{the_widget.link_button_to_a_page}" != undefined;
+            return $scope.isWebRTCSupported() || "#{the_widget.link_button_to_a_page}";
           }
 
           $scope.isInCall = function () {
