[MISC] Now using minified version of jssip-0.7.9

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -21,7 +21,8 @@ html(lang='en', ng-app="voxboneApp")
     script(src="//google-code-prettify.googlecode.com/svn/loader/run_prettify.js")
     script(src="https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/1.5.3/clipboard.min.js",type="application/javascript")
 
-    script(src="//webrtc.voxbone.com/js/jssip-0.7.9-vox.js",type="application/javascript")
+    //- script(src="//webrtc.voxbone.com/js/jssip-0.7.9-vox.js",type="application/javascript")
+    script(src="//webrtc.voxbone.com/js/jssip-0.7.9.min-vox.js",type="application/javascript")
     script(src="//webrtc.voxbone.com/js/voxbone-0.0.3.js",type="application/javascript")
 
     script.
