--- a/views/voxbone_widget.jade
+++ b/views/voxbone_widget.jade
@@ -43,7 +43,7 @@ html(lang='en', ng-app="voxboneApp")
         },
         'failed': function (e){
           console.log('Failed to connect: ' + e.cause);
-          sendPostMessage('setCallFailed', e.cause);
+          sendPostMessage('setCallFailed', e.cause.substr(0,11));
         },
         'accepted': function (e){
           console.log('Call started');
