--- a/public/stylesheets/root.css
+++ b/public/stylesheets/root.css
@@ -853,3 +853,9 @@ Plugin Css
 .nav-tabs {
   border-bottom: 0px;
 }
+.tooltip-inner {
+  max-width: 250px;
+  min-width: 150px;
+  /* If max-width does not work, try using width instead */
+  width: 250px;
+}
