--- a/views/layout.jade
+++ b/views/layout.jade
@@ -46,3 +46,12 @@ html(lang='en', ng-app="voxboneApp")
             a.login.withripple(href="/login") Login
 
     block content
+
+    footer
+      .container
+        .col-xs-12.text-center#bottom-footer
+          a(target="_blank" href="https://www.voxbone.com/resources/Voxbone_AUP.pdf") Acceptable Use Policy
+          a(target="_blank" href="https://www.voxbone.com/privacypolicy.jsf") Privacy Policy
+          a(target="_blank" href="https://docs.google.com/document/d/1ceIRe6v1g8IEqLTRNf7wkSndxjpq2XpqbFCPN2AGq6o/edit#heading=h.8b1snyh64713") Known Issues
+          a(target="_blank" href="mailto:cwhart@voxbone.com?subject=Voxbone Widget Generator Feedback") Send feedback
+          a(target="_blank" href="https://www.voxbone.com/" style="border-right: 0px;") Copyright ©2015, VOXBONE SA
