--- a/public/stylesheets/root.css
+++ b/public/stylesheets/root.css
@@ -862,3 +862,31 @@ Plugin Css
 pre {
   white-space: pre-wrap;
 }
+/* Sticky footer styles
+-------------------------------------------------- */
+.footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  /* Set the fixed height of the footer here */
+  height: 60px;
+}
+#bottom-footer {
+  margin-bottom: 20px;
+  padding-top: 15px;
+  padding-bottom: 15px;
+}
+#bottom-footer a {
+  text-decoration: none;
+  -webkit-transition: all 0.2s ease-in-out;
+  -moz-transition: all 0.2s ease-in-out;
+  -o-transition: all 0.2s ease-in-out;
+  -ms-transition: all 0.2s ease-in-out;
+  transition: all 0.2s ease-in-out;
+  font-size: 12px;
+  padding: 0px 15px;
+  border-right: 1px solid #ccc;
+  color: #626262;
+  padding: 0 12px;
+  text-shadow: 1px 1px 0 #ffffff;
+}
