[vxb-bug-19] Resetting mic mute status on calling

--- a/views/widget.jade
+++ b/views/widget.jade
@@ -195,6 +195,7 @@ block content
 
         if($scope.isWebRTCSupported()){
           $("#vw-title").text("Calling");
+          $("#microphone em").removeClass('on').removeClass('off');
           $("#vw-unable-to-acces-mic").addClass('hidden');
           $(".vw-animated-dots").removeClass('hidden');
           $(".vox-widget-wrapper").removeClass('hidden');
