[vxb-bug-22] Google shared docs are not visible for everybody

--- a/views/widget.jade
+++ b/views/widget.jade
@@ -370,7 +370,7 @@ block content
           .col-xs-12
             h1 Create a WebRTC Call Button
             p #[b Note:] this will create a code snippet for a click-to-call widget. The widget allows calls to be made without installing any software on browsers that support WebRTC. This snippet code can be embedded into any webpage or Content Management System that supports loading external JavaScript.
-            p #[b Questions?] #[a(href="https://docs.google.com/document/d/1_sX-DC_ZFeuXA2CJjijZp2W6bdgCLrHGBv5cAiTfU08/edit#heading=h.506ccgv3qxhr" target="_blank") See our Frequently Asked Questions document.]
+            p #[b Questions?] #[a(href="https://docs.google.com/document/d/1L6swwK_rVu_2XqSNMzmMRxBxL3YL50YTzkF6NaqeLqU/edit?usp=sharing" target="_blank") See our Frequently Asked Questions document.]
     .body(ng-controller="WidgetController")
       .container
         .row
