--- a/views/layout.jade
+++ b/views/layout.jade
@@ -55,6 +55,6 @@ html(lang='en', ng-app="voxboneApp")
         .col-xs-12.text-center#bottom-footer
           a(target="_blank" href="https://www.voxbone.com/resources/Voxbone_AUP.pdf") Acceptable Use Policy
           a(target="_blank" href="https://www.voxbone.com/privacypolicy.jsf") Privacy Policy
-          a(target="_blank" href="https://docs.google.com/document/d/1ceIRe6v1g8IEqLTRNf7wkSndxjpq2XpqbFCPN2AGq6o/edit#heading=h.8b1snyh64713") Known Issues
+          a(target="_blank" href="https://docs.google.com/document/d/1rj5O9hJnjlUAe64HeeNo-ZktNRFefseEc8QAF0-z44Y/edit?usp=sharing") Known Issues
           a(target="_blank" href="mailto:cwhart@voxbone.com?subject=Voxbone Widget Generator Feedback") Send feedback
           a(target="_blank" href="https://www.voxbone.com/" style="border-right: 0px;") Copyright ©2015, VOXBONE SA
