--- a/views/widget.jade
+++ b/views/widget.jade
@@ -130,8 +130,8 @@ block content
         dial_pad: true,
         button_style: 'style-a',
         background_style: 'dark',
-        widget_code: 'Click on the SIP URI field to the left to use the Echo Service(echo@ivrs), or enter your SIP URI to Generate the code snippet',
-        sip_uri: 'echo@ivrs',
+        widget_code: 'Select from the SIP URI field the Echo Service (echo@ivrs), Digits Service (digits@ivrs) or enter your SIP URI to Generate the code snippet',
+        //- sip_uri: 'echo@ivrs',
         show_text_html_value: '<h3>This is a placeholder for your message</h3>',
         incompatible_browser_configuration: 'hide_widget'
       };
@@ -147,8 +147,11 @@ block content
         }
 
         var cookie_data = $cookies.getObject('widget_data');
-        for (var attrname in cookie_data)
-          $scope.master[attrname] = cookie_data[attrname];
+        if(cookie_data) {
+          $scope.sipUriLinked = true;
+          for (var attrname in cookie_data)
+            $scope.master[attrname] = cookie_data[attrname];
+        };
 
         $scope.widget = angular.copy($scope.master);
       };
@@ -392,7 +395,11 @@ block content
                   .form-group
                     label.control-label SIP URI
                       span.badge(data-toggle='tooltip' data-placement="right" title="This is the SIP address where inbound traffic from your Click2Vox button will be directed. Enter any valid SIP URI or use one of our diagnostic URIs – echo@ivrs or digits@ivrs") ?
-                    input.form-control(required type="text" id="sip_uri" name="sip_uri" ng-model="widget.sip_uri" ng-pattern="/^[^@]+@[^@]+$/" ng-blur="sip_provisioning(widget_form)" placeholder="i.e. echo@ivrs" auto-focus)
+                    input.form-control(required type="text" id="sip_uri" name="sip_uri" ng-model="widget.sip_uri" ng-pattern="/^[^@]+@[^@]+$/" ng-change='sip_provisioning(widget_form)' ng-model-options="{ updateOn: 'blur' }" placeholder="i.e. echo@ivrs" auto-focus list="suggested-sips")
+                    datalist#suggested-sips
+                      option echo@ivrs
+                      option digits@ivrs
+
                     div(style='color: green' ng-show="widget_form.sip_provisioning || widget_form.sip_provisioned")
                       div(ng-show="widget_form.sip_provisioning") Provisioning SIP URI...
                       div(ng-show="widget_form.sip_provisioned") SIP URI Provisioned!
