--- a/views/widget.jade
+++ b/views/widget.jade
@@ -210,8 +210,9 @@ block content
           else
             $("#dialpad").addClass('hidden');
 
-          if($scope.widget.caller_id)
-            voxbone.WebRTC.configuration.uri = (new JsSIP.URI(scheme="sip", user='' + $scope.widget.caller_id, "voxbone.com")).toString();
+          var sanitized_caller_id = $scope.widget.caller_id.replace(/[^a-zA-Z0-9-_]/g, '')
+          if(sanitized_caller_id)
+            voxbone.WebRTC.configuration.uri = (new JsSIP.URI(scheme="sip", user='' + sanitized_caller_id, "voxbone.com")).toString();
 
           if($scope.widget.context)
             voxbone.WebRTC.context = $scope.widget.context;
@@ -244,7 +245,7 @@ block content
         console.log("--> Generating Output Code...");
 
         var data = {
-          caller_id: $scope.widget.caller_id,
+          caller_id: $scope.widget.caller_id.replace(/[^a-zA-Z0-9-_]/g, ''),
           sip_uri: $scope.widget.sip_uri,
           button_label: $scope.widget.button_label,
           button_style: $scope.widget.button_style,
@@ -414,7 +415,7 @@ block content
                       .options-wrap.active
                         .form-group
                           label(for="btn-context") Caller ID
-                            span.badge(data-toggle='tooltip' data-placement="right" title="Enter the Caller ID that you would like sent with your Click2Vox widget calls") ?
+                            span.badge(data-toggle='tooltip' data-placement="right" title="Enter the Caller ID that you would like sent with your Click2Vox widget calls (Only valid URI characters will be sent)") ?
                           input.form-control(type="text" name="caller_id" ng-model="widget.caller_id" value="voxrtc_demo" placeholder="i.e. voxrtc_demo" ng-change='widget.generateOutputCode()' ng-model-options="{ updateOn: 'blur' }")
                         .form-group
                           label(for="btn-context") Context
