--- a/views/widget.jade
+++ b/views/widget.jade
@@ -210,9 +210,8 @@ block content
           else
             $("#dialpad").addClass('hidden');
 
-          var sanitized_caller_id = $scope.widget.caller_id.replace(/[^a-zA-Z0-9-_]/g, '')
-          if(sanitized_caller_id)
-            voxbone.WebRTC.configuration.uri = (new JsSIP.URI(scheme="sip", user='' + sanitized_caller_id, "voxbone.com")).toString();
+          if($scope.widget.caller_id)
+            voxbone.WebRTC.configuration.uri = (new JsSIP.URI(scheme="sip", user=('' + $scope.widget.caller_id).replace(/[^a-zA-Z0-9-_]/g, ''), "voxbone.com")).toString();
 
           if($scope.widget.context)
             voxbone.WebRTC.context = $scope.widget.context;
@@ -244,8 +243,13 @@ block content
         if (!$scope.sipUriLinked) return;
         console.log("--> Generating Output Code...");
 
+
+        var caller_id = $scope.widget.caller_id;
+        if(caller_id)
+          caller_id = caller_id.replace(/[^a-zA-Z0-9-_]/g, '')
+
         var data = {
-          caller_id: $scope.widget.caller_id.replace(/[^a-zA-Z0-9-_]/g, ''),
+          caller_id: caller_id,
           sip_uri: $scope.widget.sip_uri,
           button_label: $scope.widget.button_label,
           button_style: $scope.widget.button_style,
