--- a/views/widget.jade
+++ b/views/widget.jade
@@ -7,8 +7,15 @@ block content
     window.setInterval("reloadPage();", 270000);
 
     function reloadPage() {
-      if(!voxbone.WebRTC.isCallOpen())
-        window.location.reload();
+      var online = navigator.onLine;
+      try {
+        if(online && !voxbone.WebRTC.isCallOpen())
+          window.location.reload();
+      }
+      catch(err) {
+        if(online)
+          window.location.reload();
+      }
     };
 
     //Copy to Clipboard
