--- a/views/widget.jade
+++ b/views/widget.jade
@@ -217,8 +217,8 @@ block content
           else
             $("#dialpad").addClass('hidden');
 
-          if($scope.widget.caller_id)
-            voxbone.WebRTC.configuration.uri = (new JsSIP.URI(scheme="sip", user=('' + $scope.widget.caller_id).replace(/[^a-zA-Z0-9-_]/g, ''), "voxbone.com")).toString();
+          var caller_id = $scope.widget.caller_id ? $scope.widget.caller_id : "click2vox";
+          voxbone.WebRTC.configuration.uri = (new JsSIP.URI(scheme="sip", user=(caller_id).replace(/[^a-zA-Z0-9-_]/g, ''), "voxbone.com")).toString();
 
           if($scope.widget.context)
             voxbone.WebRTC.context = $scope.widget.context;
@@ -432,7 +432,7 @@ block content
                         .form-group
                           label(for="btn-context") Caller ID
                             span.badge(data-toggle='tooltip' data-placement="right" title="Enter the Caller ID that you would like sent with your Click2Vox widget calls (Only valid URI characters will be sent)") ?
-                          input.form-control(type="text" name="caller_id" ng-model="widget.caller_id" value="voxrtc_demo" placeholder="i.e. voxrtc_demo" ng-change='widget.generateOutputCode()' ng-model-options="{ updateOn: 'blur' }")
+                          input.form-control(type="text" name="caller_id" ng-model="widget.caller_id" value="click2vox" placeholder="i.e. click2vox_demo" ng-change='widget.generateOutputCode()' ng-model-options="{ updateOn: 'blur' }")
                         .form-group
                           label(for="btn-context") Context
                             span.badge(data-toggle='tooltip' data-placement="right" title="Send custom data to your SIP server using the X-Voxbone-Context header. Make sure to configure your SIP server to process this header.") ?
