--- a/views/layout.jade
+++ b/views/layout.jade
@@ -12,20 +12,22 @@ html(lang='en', ng-app="voxboneApp")
     link(href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css", rel="stylesheet")
     link(href="/stylesheets/root.css", rel="stylesheet")
     link(href="//cdnjs.cloudflare.com/ajax/libs/raty/2.7.0/jquery.raty.css", rel="stylesheet")
+    link(href="//cdn.jsdelivr.net/qtip2/2.2.1/jquery.qtip.min.css", rel="stylesheet")
 
-    script(src="//ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js",type="application/javascript")
-    script(src='//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js' )
+    script(src="//ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js")
+    script(src='//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js')
 
-    script(src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js",type="application/javascript")
-    script(src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-sanitize.min.js",type="application/javascript")
-    script(src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-cookies.min.js",type="application/javascript")
+    script(src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js")
+    script(src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-sanitize.min.js")
+    script(src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-cookies.min.js")
 
-    script(src="//cdnjs.cloudflare.com/ajax/libs/raty/2.7.0/jquery.raty.js",type="application/javascript")
+    script(src="//cdn.jsdelivr.net/qtip2/2.2.1/jquery.qtip.min.js")
+    script(src="//cdnjs.cloudflare.com/ajax/libs/raty/2.7.0/jquery.raty.js")
     script(src="//google-code-prettify.googlecode.com/svn/loader/run_prettify.js")
-    script(src="https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/1.5.3/clipboard.min.js",type="application/javascript")
+    script(src="//cdnjs.cloudflare.com/ajax/libs/clipboard.js/1.5.3/clipboard.min.js")
 
-    script(src="//webrtc.voxbone.com/js/jssip-0.7.9.min-vox.js",type="application/javascript")
-    script(src="//webrtc.voxbone.com/js/voxbone-0.0.3.js",type="application/javascript")
+    script(src="//webrtc.voxbone.com/js/jssip-0.7.9.min-vox.js")
+    script(src="//webrtc.voxbone.com/js/voxbone-0.0.3.js")
 
     script.
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
