--- a/views/layout.jade
+++ b/views/layout.jade
@@ -29,14 +29,24 @@ html(lang='en', ng-app="voxboneApp")
     script(src="//webrtc.voxbone.com/js/jssip-0.7.9.min-vox.js")
     script(src="//webrtc.voxbone.com/js/voxbone-0.0.3.js")
 
-    script.
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+    if process.env.GOOGLE_ANALYTICS_ID
+      script.
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-      ga('create', '#{process.env.GOOGLE_ANALYTICS_ID}', 'auto');
-      ga('send', 'pageview');
+        ga('create', '#{process.env.GOOGLE_ANALYTICS_ID}', 'auto');
+        ga('send', 'pageview');
+
+    if process.env.INSPECTLET_ID
+      script#inspectletjs.
+        window.__insp = window.__insp || [];
+        __insp.push(['wid', '#{process.env.INSPECTLET_ID}']);
+        (function() {
+        function ldinsp(){if(typeof window.__inspld != "undefined") return; window.__inspld = 1; var insp = document.createElement('script'); insp.type = 'text/javascript'; insp.async = true; insp.id = "inspsync"; insp.src = ('https:' == document.location.protocol ? 'https' : 'http') + '://cdn.inspectlet.com/inspectlet.js'; var x = document.getElementsByTagName('script')[0]; x.parentNode.insertBefore(insp, x); };
+        setTimeout(ldinsp, 500); document.readyState != "complete" ? (window.attachEvent ? window.attachEvent('onload', ldinsp) : window.addEventListener('load', ldinsp, false)) : ldinsp();
+        })();
 
   body
     .container
