--- a/views/layout.jade
+++ b/views/layout.jade
@@ -47,6 +47,7 @@ html(lang='en', ng-app="voxboneApp")
         function ldinsp(){if(typeof window.__inspld != "undefined") return; window.__inspld = 1; var insp = document.createElement('script'); insp.type = 'text/javascript'; insp.async = true; insp.id = "inspsync"; insp.src = ('https:' == document.location.protocol ? 'https' : 'http') + '://cdn.inspectlet.com/inspectlet.js'; var x = document.getElementsByTagName('script')[0]; x.parentNode.insertBefore(insp, x); };
         setTimeout(ldinsp, 500); document.readyState != "complete" ? (window.attachEvent ? window.attachEvent('onload', ldinsp) : window.addEventListener('load', ldinsp, false)) : ldinsp();
         })();
+        __insp.push(['tagSession', {email: "#{email || 'nobody@nobody.com'}"}]);
 
   body
     .container
